--- a/styles.css
+++ b/styles.css
@@ -451,6 +451,7 @@ img {
 @media only screen and (max-width: 800px) {
     .about-me-img {
         min-height: 300px;
+        margin: auto;
     }
 }
 
@@ -479,7 +480,8 @@ img {
 
     .about-me-img {
         width: 100%;
-        min-height: 200px;
+        min-height: 300px;
+
     }
 
     /* Estilos para las tarjetas en la sección de habilidades */
